added setNameDialog and added it to mainWindow, it's not active for now, because the config gets copied everytime we build, so it would be really annoying to get the dialog in developing over and over again, uncomment it if we are finished

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,8 @@
 [common]
 width=1000
 height=700
-playername="MeMyselfAndI"
+playername="Mr. Nobody"
+changed_playername=0
 language="qtmaumau_de"
 [network]
 port=2222
