--- a/config.ini
+++ b/config.ini
@@ -4,5 +4,8 @@ height=700
 playername="Mr. Nobody"
 changed_playername=0
 language="qtmaumau_de"
+card_deck="1"
+card_img_extension=".png"
+volume="50"
 [network]
 port=2222
