added config for animation velocity, changed the zIndex for cards its not very good, maybe its more like 'verschlimmbessert'

--- a/config.ini
+++ b/config.ini
@@ -4,8 +4,9 @@ height=700
 playername="Mr. Nobody"
 changed_playername=0
 language="qtmaumau_de"
-card_deck="1"
+card_deck=1
 card_img_extension=".png"
-volume="50"
+volume=50
+animation_velocity=500
 [network]
 port=2222
